--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "semver": "~2.2.1"
+    "semver": "~2.2.1",
+    "shelljs": "~0.2.6"
   }
 }
